--- a/5-menu/setup/src/index.css
+++ b/5-menu/setup/src/index.css
@@ -59,7 +59,13 @@ Global Styles
   padding: 0;
   box-sizing: border-box;
 }
+
+/* * {
+  border: 1px solid red;
+  padding: 5px;
+} */
 body {
+  border: 1px solid red;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background: var(--clr-grey-10);
